parser.out
Created by PLY version 3.9 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> SIMPLEGAME generate_initial_goto ID D_2P sprites interactions goals mapping map block BIG_END
Rule 2     programa -> PROGRAM generate_initial_goto ID D_2P block BIG_END
Rule 3     generate_initial_goto -> <empty>
Rule 4     sprites -> SPRITESET D_2P sprite D_PYC more_sprites SMALL_END
Rule 5     more_sprites -> sprite D_PYC more_sprites
Rule 6     more_sprites -> <empty>
Rule 7     sprite -> ID EQUAL sprite_type sprite_attrs
Rule 8     sprite_type -> IMMOVABLE
Rule 9     sprite_type -> MOVINGAVATAR
Rule 10    sprite_type -> SHOOTINGAVATAR
Rule 11    sprite_type -> MISSILE
Rule 12    sprite_type -> SPAWNER
Rule 13    sprite_type -> PASSIVE
Rule 14    sprite_attrs -> sprite_attr more_sprite_attrs
Rule 15    sprite_attrs -> <empty>
Rule 16    more_sprite_attrs -> D_C sprite_attr more_sprite_attrs
Rule 17    more_sprite_attrs -> <empty>
Rule 18    sprite_attr -> IMG EQUAL STRING_CT
Rule 19    sprite_attr -> GENERATEDSPRITE EQUAL ID
Rule 20    sprite_attr -> SPEED EQUAL FLOAT_CT
Rule 21    sprite_attr -> PORTAL EQUAL BOOLEAN_CT
Rule 22    sprite_attr -> SHRINKFACTOR EQUAL FLOAT_CT
Rule 23    sprite_attr -> LIMIT EQUAL INT_CT
Rule 24    sprite_attr -> PROB EQUAL FLOAT_CT
Rule 25    sprite_attr -> COOLDOWN EQUAL INT_CT
Rule 26    sprite_attr -> COLOR EQUAL COLOR_CT
Rule 27    sprite_attr -> HEALTHPOINTS EQUAL INT_CT
Rule 28    sprite_attr -> LIMITHEALTHPOINTS EQUAL INT_CT
Rule 29    sprite_attr -> WEAPONSPRITE EQUAL ID
Rule 30    sprite_attr -> ORIENTATION EQUAL MOVEMENT_CT
Rule 31    interactions -> INTERACTIONLIST D_2P interaction D_PYC more_interactions SMALL_END
Rule 32    more_interactions -> interaction D_PYC more_interactions
Rule 33    more_interactions -> <empty>
Rule 34    interaction -> ID more_spritesid ENCOUNTERS ID EQUAL action more_actions
Rule 35    more_spritesid -> D_C ID more_spritesid
Rule 36    more_spritesid -> <empty>
Rule 37    more_actions -> D_C action more_actions
Rule 38    more_actions -> <empty>
Rule 39    action -> KILLSPRITE D_PA kill_id D_PC
Rule 40    action -> STEPBACK
Rule 41    action -> SCORECHANGE D_PA FLOAT_CT D_PC
Rule 42    action -> TRANSFORMTO D_PA ID D_PC
Rule 43    action -> BOUNCEFORWARD
Rule 44    action -> CHANGEHEALTHPOINTS D_PA INT_CT D_PC
Rule 45    action -> ADDTIMER TIME EQUAL INT_CT TRANSFORMALL D_PA ID D_C ID D_PC
Rule 46    action -> SHIELDFROM D_PA KILLSPRITE D_C ID D_PC
Rule 47    action -> PULLWITHIT
Rule 48    kill_id -> ID
Rule 49    kill_id -> <empty>
Rule 50    goals -> TERMINATIONGOALS D_2P goal D_PYC more_goals SMALL_END
Rule 51    more_goals -> goal D_PYC
Rule 52    more_goals -> <empty>
Rule 53    goal -> goal_type LIMIT EQUAL INT_CT WIN EQUAL BOOLEAN_CT
Rule 54    goal_type -> SPRITECOUNTER SPRITE EQUAL ID
Rule 55    goal_type -> MULTISPRITECOUNTER sprite_list
Rule 56    goal_type -> TIMEOUT
Rule 57    sprite_list -> SPRITE EQUAL ID more_sprite_list
Rule 58    more_sprite_list -> D_C sprite_list
Rule 59    more_sprite_list -> <empty>
Rule 60    mapping -> MAPPING D_2P mapping_rule D_PYC more_mapping_rules SMALL_END
Rule 61    more_mapping_rules -> mapping_rule D_PYC more_mapping_rules
Rule 62    more_mapping_rules -> <empty>
Rule 63    mapping_rule -> CHAR_CT EQUAL ID more_spritesid
Rule 64    map -> MAP D_2P STRING_CT D_PYC more_tiles SMALL_END
Rule 65    more_tiles -> STRING_CT D_PYC more_tiles
Rule 66    more_tiles -> <empty>
Rule 67    block -> vars save_vars_in_global_memory functions main_block
Rule 68    save_vars_in_global_memory -> <empty>
Rule 69    vars -> var D_PYC vars
Rule 70    vars -> <empty>
Rule 71    var -> VAR type D_2P ID
Rule 72    var -> VAR type D_CA INT_CT D_CC D_2P ID
Rule 73    type -> INT
Rule 74    type -> FLOAT
Rule 75    type -> STRING
Rule 76    type -> CHAR
Rule 77    type -> BOOLEAN
Rule 78    functions -> function functions
Rule 79    functions -> <empty>
Rule 80    save_function -> <empty>
Rule 81    function -> FUNC save_function_id D_PA parameters D_PC EQUAL type save_function D_2P code_block SMALL_END generate_end_func
Rule 82    generate_end_func -> <empty>
Rule 83    save_function_id -> ID
Rule 84    parameters -> parameter more_parameters
Rule 85    parameters -> <empty>
Rule 86    parameter -> type D_2P type_parameter
Rule 87    type_parameter -> D_AMP ID
Rule 88    type_parameter -> ID
Rule 89    more_parameters -> D_C parameter more_parameters
Rule 90    more_parameters -> <empty>
Rule 91    main_block -> MAIN set_function_id_main D_2P code_block SMALL_END
Rule 92    set_function_id_main -> <empty>
Rule 93    code_block -> vars save_vars_in_local_memory mini_block
Rule 94    save_vars_in_local_memory -> <empty>
Rule 95    statute -> assignation check_stack_equal
Rule 96    statute -> condition
Rule 97    statute -> printing
Rule 98    statute -> reading
Rule 99    statute -> cycle
Rule 100   statute -> function_use
Rule 101   statute -> return
Rule 102   check_stack_equal -> <empty>
Rule 103   function_use -> validate_function_id_do_era D_PA add_parameter more_ids D_PC validate_params_generate_gosub
Rule 104   function_use -> validate_function_id_do_era D_PA D_PC validate_params_generate_gosub
Rule 105   function_use -> STARTGAME D_PA D_PC
Rule 106   validate_function_id_do_era -> ID
Rule 107   add_parameter -> expression
Rule 108   validate_params_generate_gosub -> <empty>
Rule 109   more_ids -> D_C add_parameter more_ids
Rule 110   more_ids -> <empty>
Rule 111   assignation -> received_id value_list push_equal expression
Rule 112   push_equal -> EQUAL
Rule 113   value_list -> D_CA expression D_CC
Rule 114   value_list -> <empty>
Rule 115   printing -> PRINT D_PA printable D_PC
Rule 116   printable -> expression more_printable
Rule 117   more_printable -> D_C printable
Rule 118   more_printable -> <empty>
Rule 119   condition -> IF D_PA expression D_PC generate_gotoF_if D_2P mini_block else_condition SMALL_END generate_end_if
Rule 120   generate_gotoF_if -> <empty>
Rule 121   generate_end_if -> <empty>
Rule 122   else_condition -> ELSE generate_goto_else D_2P mini_block
Rule 123   else_condition -> <empty>
Rule 124   generate_goto_else -> <empty>
Rule 125   reading -> GETVALUE D_PA received_id D_PC generate_read_value
Rule 126   reading -> GETLINE D_PA received_id D_PC generate_read_line
Rule 127   reading -> GETBOOLEAN D_PA received_id D_PC generate_read_boolean
Rule 128   reading -> GETCHAR D_PA received_id D_PC generate_read_char
Rule 129   generate_read_value -> <empty>
Rule 130   generate_read_line -> <empty>
Rule 131   generate_read_boolean -> <empty>
Rule 132   generate_read_char -> <empty>
Rule 133   cycle -> WHILE push_cont_in_stackJumps D_PA expression D_PC generate_gotoF_while D_2P mini_block SMALL_END generate_end_while
Rule 134   push_cont_in_stackJumps -> <empty>
Rule 135   generate_gotoF_while -> <empty>
Rule 136   generate_end_while -> <empty>
Rule 137   return -> RETURN expression
Rule 138   mini_block -> statute D_PYC mini_block
Rule 139   mini_block -> <empty>
Rule 140   expression -> big_exp or_exp check_stack_or
Rule 141   check_stack_or -> <empty>
Rule 142   or_exp -> OR expression
Rule 143   or_exp -> <empty>
Rule 144   big_exp -> medium_exp and_exp check_stack_and
Rule 145   check_stack_and -> <empty>
Rule 146   and_exp -> AND big_exp
Rule 147   and_exp -> <empty>
Rule 148   medium_exp -> exp relational_exp check_stack_mmdi
Rule 149   check_stack_mmdi -> <empty>
Rule 150   relational_exp -> MAYOR_QUE exp
Rule 151   relational_exp -> MENOR_QUE exp
Rule 152   relational_exp -> DIFERENTE_DE exp
Rule 153   relational_exp -> IGUAL_QUE exp
Rule 154   relational_exp -> <empty>
Rule 155   exp -> term check_stack_pm add_term
Rule 156   check_stack_pm -> <empty>
Rule 157   add_term -> push_pm exp
Rule 158   add_term -> <empty>
Rule 159   push_pm -> PLUS
Rule 160   push_pm -> MINUS
Rule 161   term -> factor check_stack_td times_factor
Rule 162   check_stack_td -> <empty>
Rule 163   times_factor -> push_td term
Rule 164   times_factor -> <empty>
Rule 165   push_td -> TIMES
Rule 166   push_td -> DIVISION
Rule 167   factor -> push_pa expression pop_pc
Rule 168   factor -> var_ct
Rule 169   push_pa -> D_PA
Rule 170   pop_pc -> D_PC
Rule 171   var_ct -> received_id value_list
Rule 172   var_ct -> received_float
Rule 173   var_ct -> received_int
Rule 174   var_ct -> received_boolean
Rule 175   var_ct -> received_string
Rule 176   var_ct -> received_char
Rule 177   var_ct -> function_use
Rule 178   received_id -> ID
Rule 179   received_float -> FLOAT_CT
Rule 180   received_int -> INT_CT
Rule 181   received_boolean -> BOOLEAN_CT
Rule 182   received_string -> STRING_CT
Rule 183   received_char -> CHAR_CT

Terminals, with rules where they appear

ADDTIMER             : 45
AND                  : 146
BIG_END              : 1 2
BOOLEAN              : 77
BOOLEAN_CT           : 21 53 181
BOUNCEFORWARD        : 43
CHANGEHEALTHPOINTS   : 44
CHAR                 : 76
CHAR_CT              : 63 183
COLOR                : 26
COLOR_CT             : 26
COOLDOWN             : 25
DIFERENTE_DE         : 152
DIVISION             : 166
D_2P                 : 1 2 4 31 50 60 64 71 72 81 86 91 119 122 133
D_AMP                : 87
D_C                  : 16 35 37 45 46 58 89 109 117
D_CA                 : 72 113
D_CC                 : 72 113
D_PA                 : 39 41 42 44 45 46 81 103 104 105 115 119 125 126 127 128 133 169
D_PC                 : 39 41 42 44 45 46 81 103 104 105 115 119 125 126 127 128 133 170
D_PYC                : 4 5 31 32 50 51 60 61 64 65 69 138
ELSE                 : 122
ENCOUNTERS           : 34
EQUAL                : 7 18 19 20 21 22 23 24 25 26 27 28 29 30 34 45 53 53 54 57 63 81 112
FLOAT                : 74
FLOAT_CT             : 20 22 24 41 179
FUNC                 : 81
GENERATEDSPRITE      : 19
GETBOOLEAN           : 127
GETCHAR              : 128
GETLINE              : 126
GETVALUE             : 125
HEALTHPOINTS         : 27
ID                   : 1 2 7 19 29 34 34 35 42 45 45 46 48 54 57 63 71 72 83 87 88 106 178
IF                   : 119
IGUAL_QUE            : 153
IMG                  : 18
IMMOVABLE            : 8
INT                  : 73
INTERACTIONLIST      : 31
INT_CT               : 23 25 27 28 44 45 53 72 180
KILLSPRITE           : 39 46
LIMIT                : 23 53
LIMITHEALTHPOINTS    : 28
MAIN                 : 91
MAP                  : 64
MAPPING              : 60
MAYOR_QUE            : 150
MENOR_QUE            : 151
MINUS                : 160
MISSILE              : 11
MOVEMENT_CT          : 30
MOVINGAVATAR         : 9
MULTISPRITECOUNTER   : 55
OR                   : 142
ORIENTATION          : 30
PASSIVE              : 13
PLUS                 : 159
PORTAL               : 21
PRINT                : 115
PROB                 : 24
PROGRAM              : 2
PULLWITHIT           : 47
RETURN               : 137
SCORECHANGE          : 41
SHIELDFROM           : 46
SHOOTINGAVATAR       : 10
SHRINKFACTOR         : 22
SIMPLEGAME           : 1
SMALL_END            : 4 31 50 60 64 81 91 119 133
SPAWNER              : 12
SPEED                : 20
SPRITE               : 54 57
SPRITECOUNTER        : 54
SPRITESET            : 4
STARTGAME            : 105
STEPBACK             : 40
STRING               : 75
STRING_CT            : 18 64 65 182
TERMINATIONGOALS     : 50
TIME                 : 45
TIMEOUT              : 56
TIMES                : 165
TRANSFORMALL         : 45
TRANSFORMTO          : 42
VAR                  : 71 72
WEAPONSPRITE         : 29
WHILE                : 133
WIN                  : 53
error                : 

Nonterminals, with rules where they appear

action               : 34 37
add_parameter        : 103 109
add_term             : 155
and_exp              : 144
assignation          : 95
big_exp              : 140 146
block                : 1 2
check_stack_and      : 144
check_stack_equal    : 95
check_stack_mmdi     : 148
check_stack_or       : 140
check_stack_pm       : 155
check_stack_td       : 161
code_block           : 81 91
condition            : 96
cycle                : 99
else_condition       : 119
exp                  : 148 150 151 152 153 157
expression           : 107 111 113 116 119 133 137 142 167
factor               : 161
function             : 78
function_use         : 100 177
functions            : 67 78
generate_end_func    : 81
generate_end_if      : 119
generate_end_while   : 133
generate_gotoF_if    : 119
generate_gotoF_while : 133
generate_goto_else   : 122
generate_initial_goto : 1 2
generate_read_boolean : 127
generate_read_char   : 128
generate_read_line   : 126
generate_read_value  : 125
goal                 : 50 51
goal_type            : 53
goals                : 1
interaction          : 31 32
interactions         : 1
kill_id              : 39
main_block           : 67
map                  : 1
mapping              : 1
mapping_rule         : 60 61
medium_exp           : 144
mini_block           : 93 119 122 133 138
more_actions         : 34 37
more_goals           : 50
more_ids             : 103 109
more_interactions    : 31 32
more_mapping_rules   : 60 61
more_parameters      : 84 89
more_printable       : 116
more_sprite_attrs    : 14 16
more_sprite_list     : 57
more_sprites         : 4 5
more_spritesid       : 34 35 63
more_tiles           : 64 65
or_exp               : 140
parameter            : 84 89
parameters           : 81
pop_pc               : 167
printable            : 115 117
printing             : 97
programa             : 0
push_cont_in_stackJumps : 133
push_equal           : 111
push_pa              : 167
push_pm              : 157
push_td              : 163
reading              : 98
received_boolean     : 174
received_char        : 176
received_float       : 172
received_id          : 111 125 126 127 128 171
received_int         : 173
received_string      : 175
relational_exp       : 148
return               : 101
save_function        : 81
save_function_id     : 81
save_vars_in_global_memory : 67
save_vars_in_local_memory : 93
set_function_id_main : 91
sprite               : 4 5
sprite_attr          : 14 16
sprite_attrs         : 7
sprite_list          : 55 58
sprite_type          : 7
sprites              : 1
statute              : 138
term                 : 155 163
times_factor         : 161
type                 : 71 72 81 86
type_parameter       : 86
validate_function_id_do_era : 103 104
validate_params_generate_gosub : 103 104
value_list           : 111 171
var                  : 69
var_ct               : 168
vars                 : 67 69 93

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . SIMPLEGAME generate_initial_goto ID D_2P sprites interactions goals mapping map block BIG_END
    (2) programa -> . PROGRAM generate_initial_goto ID D_2P block BIG_END

    SIMPLEGAME      shift and go to state 1
    PROGRAM         shift and go to state 2

    programa                       shift and go to state 3

state 1

    (1) programa -> SIMPLEGAME . generate_initial_goto ID D_2P sprites interactions goals mapping map block BIG_END
    (3) generate_initial_goto -> .

    ID              reduce using rule 3 (generate_initial_goto -> .)

    generate_initial_goto          shift and go to state 4

state 2

    (2) programa -> PROGRAM . generate_initial_goto ID D_2P block BIG_END
    (3) generate_initial_goto -> .

    ID              reduce using rule 3 (generate_initial_goto -> .)

    generate_initial_goto          shift and go to state 5

state 3

    (0) S' -> programa .



state 4

    (1) programa -> SIMPLEGAME generate_initial_goto . ID D_2P sprites interactions goals mapping map block BIG_END

    ID              shift and go to state 6


state 5

    (2) programa -> PROGRAM generate_initial_goto . ID D_2P block BIG_END

    ID              shift and go to state 7


state 6

    (1) programa -> SIMPLEGAME generate_initial_goto ID . D_2P sprites interactions goals mapping map block BIG_END

    D_2P            shift and go to state 8


state 7

    (2) programa -> PROGRAM generate_initial_goto ID . D_2P block BIG_END

    D_2P            shift and go to state 9


state 8

    (1) programa -> SIMPLEGAME generate_initial_goto ID D_2P . sprites interactions goals mapping map block BIG_END
    (4) sprites -> . SPRITESET D_2P sprite D_PYC more_sprites SMALL_END

    SPRITESET       shift and go to state 10

    sprites                        shift and go to state 11

state 9

    (2) programa -> PROGRAM generate_initial_goto ID D_2P . block BIG_END
    (67) block -> . vars save_vars_in_global_memory functions main_block
    (69) vars -> . var D_PYC vars
    (70) vars -> .
    (71) var -> . VAR type D_2P ID
    (72) var -> . VAR type D_CA INT_CT D_CC D_2P ID

    FUNC            reduce using rule 70 (vars -> .)
    MAIN            reduce using rule 70 (vars -> .)
    VAR             shift and go to state 14

    vars                           shift and go to state 12
    var                            shift and go to state 13
    block                          shift and go to state 15

state 10

    (4) sprites -> SPRITESET . D_2P sprite D_PYC more_sprites SMALL_END

    D_2P            shift and go to state 16


state 11

    (1) programa -> SIMPLEGAME generate_initial_goto ID D_2P sprites . interactions goals mapping map block BIG_END
    (31) interactions -> . INTERACTIONLIST D_2P interaction D_PYC more_interactions SMALL_END

    INTERACTIONLIST shift and go to state 18

    interactions                   shift and go to state 17

state 12

    (67) block -> vars . save_vars_in_global_memory functions main_block
    (68) save_vars_in_global_memory -> .

    FUNC            reduce using rule 68 (save_vars_in_global_memory -> .)
    MAIN            reduce using rule 68 (save_vars_in_global_memory -> .)

    save_vars_in_global_memory     shift and go to state 19

state 13

    (69) vars -> var . D_PYC vars

    D_PYC           shift and go to state 20


state 14

    (71) var -> VAR . type D_2P ID
    (72) var -> VAR . type D_CA INT_CT D_CC D_2P ID
    (73) type -> . INT
    (74) type -> . FLOAT
    (75) type -> . STRING
    (76) type -> . CHAR
    (77) type -> . BOOLEAN

    INT             shift and go to state 23
    FLOAT           shift and go to state 21
    STRING          shift and go to state 22
    CHAR            shift and go to state 24
    BOOLEAN         shift and go to state 25

    type                           shift and go to state 26

state 15

    (2) programa -> PROGRAM generate_initial_goto ID D_2P block . BIG_END

    BIG_END         shift and go to state 27


state 16

    (4) sprites -> SPRITESET D_2P . sprite D_PYC more_sprites SMALL_END
    (7) sprite -> . ID EQUAL sprite_type sprite_attrs

    ID              shift and go to state 29

    sprite                         shift and go to state 28

state 17

    (1) programa -> SIMPLEGAME generate_initial_goto ID D_2P sprites interactions . goals mapping map block BIG_END
    (50) goals -> . TERMINATIONGOALS D_2P goal D_PYC more_goals SMALL_END

    TERMINATIONGOALS shift and go to state 30

    goals                          shift and go to state 31

state 18

    (31) interactions -> INTERACTIONLIST . D_2P interaction D_PYC more_interactions SMALL_END

    D_2P            shift and go to state 32


state 19

    (67) block -> vars save_vars_in_global_memory . functions main_block
    (78) functions -> . function functions
    (79) functions -> .
    (81) function -> . FUNC save_function_id D_PA parameters D_PC EQUAL type save_function D_2P code_block SMALL_END generate_end_func

    MAIN            reduce using rule 79 (functions -> .)
    FUNC            shift and go to state 35

    function                       shift and go to state 33
    functions                      shift and go to state 34

state 20

    (69) vars -> var D_PYC . vars
    (69) vars -> . var D_PYC vars
    (70) vars -> .
    (71) var -> . VAR type D_2P ID
    (72) var -> . VAR type D_CA INT_CT D_CC D_2P ID

    FUNC            reduce using rule 70 (vars -> .)
    MAIN            reduce using rule 70 (vars -> .)
    IF              reduce using rule 70 (vars -> .)
    PRINT           reduce using rule 70 (vars -> .)
    GETVALUE        reduce using rule 70 (vars -> .)
    GETLINE         reduce using rule 70 (vars -> .)
    GETBOOLEAN      reduce using rule 70 (vars -> .)
    GETCHAR         reduce using rule 70 (vars -> .)
    WHILE           reduce using rule 70 (vars -> .)
    STARTGAME       reduce using rule 70 (vars -> .)
    RETURN          reduce using rule 70 (vars -> .)
    ID              reduce using rule 70 (vars -> .)
    SMALL_END       reduce using rule 70 (vars -> .)
    VAR             shift and go to state 14

    var                            shift and go to state 13
    vars                           shift and go to state 36

state 21

    (74) type -> FLOAT .

    D_2P            reduce using rule 74 (type -> FLOAT .)
    D_CA            reduce using rule 74 (type -> FLOAT .)


state 22

    (75) type -> STRING .

    D_2P            reduce using rule 75 (type -> STRING .)
    D_CA            reduce using rule 75 (type -> STRING .)


state 23

    (73) type -> INT .

    D_2P            reduce using rule 73 (type -> INT .)
    D_CA            reduce using rule 73 (type -> INT .)


state 24

    (76) type -> CHAR .

    D_2P            reduce using rule 76 (type -> CHAR .)
    D_CA            reduce using rule 76 (type -> CHAR .)


state 25

    (77) type -> BOOLEAN .

    D_2P            reduce using rule 77 (type -> BOOLEAN .)
    D_CA            reduce using rule 77 (type -> BOOLEAN .)


state 26

    (71) var -> VAR type . D_2P ID
    (72) var -> VAR type . D_CA INT_CT D_CC D_2P ID

    D_2P            shift and go to state 38
    D_CA            shift and go to state 37


state 27

    (2) programa -> PROGRAM generate_initial_goto ID D_2P block BIG_END .

    $end            reduce using rule 2 (programa -> PROGRAM generate_initial_goto ID D_2P block BIG_END .)


state 28

    (4) sprites -> SPRITESET D_2P sprite . D_PYC more_sprites SMALL_END

    D_PYC           shift and go to state 39


state 29

    (7) sprite -> ID . EQUAL sprite_type sprite_attrs

    EQUAL           shift and go to state 40


state 30

    (50) goals -> TERMINATIONGOALS . D_2P goal D_PYC more_goals SMALL_END

    D_2P            shift and go to state 41


state 31

    (1) programa -> SIMPLEGAME generate_initial_goto ID D_2P sprites interactions goals . mapping map block BIG_END
    (60) mapping -> . MAPPING D_2P mapping_rule D_PYC more_mapping_rules SMALL_END

    MAPPING         shift and go to state 42

    mapping                        shift and go to state 43

state 32

    (31) interactions -> INTERACTIONLIST D_2P . interaction D_PYC more_interactions SMALL_END
    (34) interaction -> . ID more_spritesid ENCOUNTERS ID EQUAL action more_actions

    ID              shift and go to state 45

    interaction                    shift and go to state 44

state 33

    (78) functions -> function . functions
    (78) functions -> . function functions
    (79) functions -> .
    (81) function -> . FUNC save_function_id D_PA parameters D_PC EQUAL type save_function D_2P code_block SMALL_END generate_end_func

    MAIN            reduce using rule 79 (functions -> .)
    FUNC            shift and go to state 35

    function                       shift and go to state 33
    functions                      shift and go to state 46

state 34

    (67) block -> vars save_vars_in_global_memory functions . main_block
    (91) main_block -> . MAIN set_function_id_main D_2P code_block SMALL_END

    MAIN            shift and go to state 48

    main_block                     shift and go to state 47

state 35

    (81) function -> FUNC . save_function_id D_PA parameters D_PC EQUAL type save_function D_2P code_block SMALL_END generate_end_func
    (83) save_function_id -> . ID

    ID              shift and go to state 50

    save_function_id               shift and go to state 49

state 36

    (69) vars -> var D_PYC vars .

    IF              reduce using rule 69 (vars -> var D_PYC vars .)
    PRINT           reduce using rule 69 (vars -> var D_PYC vars .)
    GETVALUE        reduce using rule 69 (vars -> var D_PYC vars .)
    GETLINE         reduce using rule 69 (vars -> var D_PYC vars .)
    GETBOOLEAN      reduce using rule 69 (vars -> var D_PYC vars .)
    GETCHAR         reduce using rule 69 (vars -> var D_PYC vars .)
    WHILE           reduce using rule 69 (vars -> var D_PYC vars .)
    STARTGAME       reduce using rule 69 (vars -> var D_PYC vars .)
    RETURN          reduce using rule 69 (vars -> var D_PYC vars .)
    ID              reduce using rule 69 (vars -> var D_PYC vars .)
    SMALL_END       reduce using rule 69 (vars -> var D_PYC vars .)
    FUNC            reduce using rule 69 (vars -> var D_PYC vars .)
    MAIN            reduce using rule 69 (vars -> var D_PYC vars .)


state 37

    (72) var -> VAR type D_CA . INT_CT D_CC D_2P ID

    INT_CT          shift and go to state 51


state 38

    (71) var -> VAR type D_2P . ID

    ID              shift and go to state 52


state 39

    (4) sprites -> SPRITESET D_2P sprite D_PYC . more_sprites SMALL_END
    (5) more_sprites -> . sprite D_PYC more_sprites
    (6) more_sprites -> .
    (7) sprite -> . ID EQUAL sprite_type sprite_attrs

    SMALL_END       reduce using rule 6 (more_sprites -> .)
    ID              shift and go to state 29

    more_sprites                   shift and go to state 54
    sprite                         shift and go to state 53

state 40

    (7) sprite -> ID EQUAL . sprite_type sprite_attrs
    (8) sprite_type -> . IMMOVABLE
    (9) sprite_type -> . MOVINGAVATAR
    (10) sprite_type -> . SHOOTINGAVATAR
    (11) sprite_type -> . MISSILE
    (12) sprite_type -> . SPAWNER
    (13) sprite_type -> . PASSIVE

    IMMOVABLE       shift and go to state 59
    MOVINGAVATAR    shift and go to state 55
    SHOOTINGAVATAR  shift and go to state 60
    MISSILE         shift and go to state 61
    SPAWNER         shift and go to state 56
    PASSIVE         shift and go to state 58

    sprite_type                    shift and go to state 57

state 41

    (50) goals -> TERMINATIONGOALS D_2P . goal D_PYC more_goals SMALL_END
    (53) goal -> . goal_type LIMIT EQUAL INT_CT WIN EQUAL BOOLEAN_CT
    (54) goal_type -> . SPRITECOUNTER SPRITE EQUAL ID
    (55) goal_type -> . MULTISPRITECOUNTER sprite_list
    (56) goal_type -> . TIMEOUT

    SPRITECOUNTER   shift and go to state 64
    MULTISPRITECOUNTER shift and go to state 62
    TIMEOUT         shift and go to state 65

    goal                           shift and go to state 63
    goal_type                      shift and go to state 66

state 42

    (60) mapping -> MAPPING . D_2P mapping_rule D_PYC more_mapping_rules SMALL_END

    D_2P            shift and go to state 67


state 43

    (1) programa -> SIMPLEGAME generate_initial_goto ID D_2P sprites interactions goals mapping . map block BIG_END
    (64) map -> . MAP D_2P STRING_CT D_PYC more_tiles SMALL_END

    MAP             shift and go to state 69

    map                            shift and go to state 68

state 44

    (31) interactions -> INTERACTIONLIST D_2P interaction . D_PYC more_interactions SMALL_END

    D_PYC           shift and go to state 70


state 45

    (34) interaction -> ID . more_spritesid ENCOUNTERS ID EQUAL action more_actions
    (35) more_spritesid -> . D_C ID more_spritesid
    (36) more_spritesid -> .

    D_C             shift and go to state 72
    ENCOUNTERS      reduce using rule 36 (more_spritesid -> .)

    more_spritesid                 shift and go to state 71

state 46

    (78) functions -> function functions .

    MAIN            reduce using rule 78 (functions -> function functions .)


state 47

    (67) block -> vars save_vars_in_global_memory functions main_block .

    BIG_END         reduce using rule 67 (block -> vars save_vars_in_global_memory functions main_block .)


state 48

    (91) main_block -> MAIN . set_function_id_main D_2P code_block SMALL_END
    (92) set_function_id_main -> .

    D_2P            reduce using rule 92 (set_function_id_main -> .)

    set_function_id_main           shift and go to state 73

state 49

    (81) function -> FUNC save_function_id . D_PA parameters D_PC EQUAL type save_function D_2P code_block SMALL_END generate_end_func

    D_PA            shift and go to state 74


state 50

    (83) save_function_id -> ID .

    D_PA            reduce using rule 83 (save_function_id -> ID .)


state 51

    (72) var -> VAR type D_CA INT_CT . D_CC D_2P ID

    D_CC            shift and go to state 75


state 52

    (71) var -> VAR type D_2P ID .

    D_PYC           reduce using rule 71 (var -> VAR type D_2P ID .)


state 53

    (5) more_sprites -> sprite . D_PYC more_sprites

    D_PYC           shift and go to state 76


state 54

    (4) sprites -> SPRITESET D_2P sprite D_PYC more_sprites . SMALL_END

    SMALL_END       shift and go to state 77


state 55

    (9) sprite_type -> MOVINGAVATAR .

    IMG             reduce using rule 9 (sprite_type -> MOVINGAVATAR .)
    GENERATEDSPRITE reduce using rule 9 (sprite_type -> MOVINGAVATAR .)
    SPEED           reduce using rule 9 (sprite_type -> MOVINGAVATAR .)
    PORTAL          reduce using rule 9 (sprite_type -> MOVINGAVATAR .)
    SHRINKFACTOR    reduce using rule 9 (sprite_type -> MOVINGAVATAR .)
    LIMIT           reduce using rule 9 (sprite_type -> MOVINGAVATAR .)
    PROB            reduce using rule 9 (sprite_type -> MOVINGAVATAR .)
    COOLDOWN        reduce using rule 9 (sprite_type -> MOVINGAVATAR .)
    COLOR           reduce using rule 9 (sprite_type -> MOVINGAVATAR .)
    HEALTHPOINTS    reduce using rule 9 (sprite_type -> MOVINGAVATAR .)
    LIMITHEALTHPOINTS reduce using rule 9 (sprite_type -> MOVINGAVATAR .)
    WEAPONSPRITE    reduce using rule 9 (sprite_type -> MOVINGAVATAR .)
    ORIENTATION     reduce using rule 9 (sprite_type -> MOVINGAVATAR .)
    D_PYC           reduce using rule 9 (sprite_type -> MOVINGAVATAR .)


state 56

    (12) sprite_type -> SPAWNER .

    IMG             reduce using rule 12 (sprite_type -> SPAWNER .)
    GENERATEDSPRITE reduce using rule 12 (sprite_type -> SPAWNER .)
    SPEED           reduce using rule 12 (sprite_type -> SPAWNER .)
    PORTAL          reduce using rule 12 (sprite_type -> SPAWNER .)
    SHRINKFACTOR    reduce using rule 12 (sprite_type -> SPAWNER .)
    LIMIT           reduce using rule 12 (sprite_type -> SPAWNER .)
    PROB            reduce using rule 12 (sprite_type -> SPAWNER .)
    COOLDOWN        reduce using rule 12 (sprite_type -> SPAWNER .)
    COLOR           reduce using rule 12 (sprite_type -> SPAWNER .)
    HEALTHPOINTS    reduce using rule 12 (sprite_type -> SPAWNER .)
    LIMITHEALTHPOINTS reduce using rule 12 (sprite_type -> SPAWNER .)
    WEAPONSPRITE    reduce using rule 12 (sprite_type -> SPAWNER .)
    ORIENTATION     reduce using rule 12 (sprite_type -> SPAWNER .)
    D_PYC           reduce using rule 12 (sprite_type -> SPAWNER .)


state 57

    (7) sprite -> ID EQUAL sprite_type . sprite_attrs
    (14) sprite_attrs -> . sprite_attr more_sprite_attrs
    (15) sprite_attrs -> .
    (18) sprite_attr -> . IMG EQUAL STRING_CT
    (19) sprite_attr -> . GENERATEDSPRITE EQUAL ID
    (20) sprite_attr -> . SPEED EQUAL FLOAT_CT
    (21) sprite_attr -> . PORTAL EQUAL BOOLEAN_CT
    (22) sprite_attr -> . SHRINKFACTOR EQUAL FLOAT_CT
    (23) sprite_attr -> . LIMIT EQUAL INT_CT
    (24) sprite_attr -> . PROB EQUAL FLOAT_CT
    (25) sprite_attr -> . COOLDOWN EQUAL INT_CT
    (26) sprite_attr -> . COLOR EQUAL COLOR_CT
    (27) sprite_attr -> . HEALTHPOINTS EQUAL INT_CT
    (28) sprite_attr -> . LIMITHEALTHPOINTS EQUAL INT_CT
    (29) sprite_attr -> . WEAPONSPRITE EQUAL ID
    (30) sprite_attr -> . ORIENTATION EQUAL MOVEMENT_CT
